src/test/deca/codegen/invalid/Objet/UninitializedClass.deca
// Description:
//      Program having an undefined behaviour
//
// Result:
//      ERROR: dereferencing null
//
// History:
//      created on 17/1/2022

class Null { float documentation; }

{ 
    Null laRSE;
    println(laRSE.documentation);
}
